--- a/ESP32CamAI_android/openCVLibrary348/build.gradle
+++ b/ESP32CamAI_android/openCVLibrary348/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 33
     }
 
     buildTypes {
@@ -15,4 +14,5 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    namespace 'org.opencv'
 }
